# endo

./: .env.example  .eslintignore  .eslintignore.bak  .eslintrc  .eslintrc-jessie.js  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .npmignore  .nycrc  .prettierignore  .prettierrc  .travis.yml  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DRINKME.md  ENGO.md  MAINTAINERS.md  NEWS.md  README-development.md  README.html  README.md  REWRITE.md  SETUP-DELETEME.md  TODO.md  TODOs-lore.md  TODOs.md  agoric notes.md  ava-base.config.mjs  ava-endo-lockdown-unsafe.config.mjs  ava-endo-lockdown.config.mjs  ava-noop-harden.config.mjs  (+47 more)
.changeset/: add-endo-hex.md  add-endo-tar.md  amaro.md  base64-harden.md  base64-native-fallthrough.md  beige-gifts-invent.md  better-paths-wink.md  blue-deserts-sniff.md  blue-kids-smoke.md  blue-parents-retire.md  break-dep-cycle-zip-cleanup.md  breezy-insects-do.md  build-ts-support.md  bundle-source-cache-load-types.md  bundle-source-cache-source-maps-types.md  bundle-source-profiling.md  byte-array-hex-codecs.md  bytes-immutable-helpers.md  bytes-tolerate-emulated-frozen-uint8array.md  captp-default-chaining.md  chubby-coats-greet.md  clear-icons-find.md  cli-ts-blank-space.md  cli-ts-runtime.md  common-object-extend-each.md  compartment-mapper-default-chaining.md  config.json  cozy-bushes-allow.md  cull-created-by.md  daemon-endomount-directory-specialization.md  daemon-endomount-fs-fixes.md  daemon-ts6-type-precision.md  drop-the-pseudo-prototype.md  endo-chacha12.md  endo-changelog-generator.js  eslint-plugin-catalog-deps.md  eslint-plugin-numeric-separators.md  eslint-plugin-ts-eslint-ranges.md  eslint-plugin-upgrade.md  eslint-ts-import-rule.md  (+83 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  renovate.json5
PLAN/: endo_posix_sandbox.md  genie_in_bottle.md  genie_loop_architecture.md  genie_loop_overview.md  genie_loop_remote.md  genie_memory_context_injection.md  genie_memory_implementation.md  genie_memory_knowledge_layer.md  genie_memory_overview.md  genie_memory_session_layer.md  genie_sandbox_all_tools.md
SES/: .eslintignore  .eslintrc.js  .npmignore  .prettierignore  rollup.config.js
TADA/: 00_genie_feedback.md  10_endo_posix_sandbox.md  10_genie_self.md  11_endo_posix_sandbox_initial.md  11_genie_self_main_refactor.md  12_endo_posix_sandbox_phase0_interfaces.md  12_genie_self_setup_launcher.md  13_endo_posix_sandbox_phase1_bwrap.md  13_genie_self_bottle_narrative.md  14_endo_posix_sandbox_phase1_5_bwrap_hardening.md  14_genie_self_tests.md  15_endo_posix_sandbox_phase2_podman.md  16_endo_posix_sandbox_test_fix.md  17_endo_posix_sandbox_test_fix.md  18_endo_posix_sandbox_test_gha.md  19_sandbox_drivers_ci_job.md  20_sandbox_drivers_ci_image_prepull.md  21_genie_heartbeat_tick.md  21_genie_sandbox_review_notes.md  21_sandbox_path.md  22_endo_posix_sandbox_phase3_5a_genie_workspace.md  22_genie_file_tools.md  22_genie_heartbeat_tick_map.md  22_genie_workspace_mount_form_value.md  (+123 more)
rust/claude-orch/runtime-agent/: Cargo.toml
rust/claude-orch/runtime-agent/src/: main.rs  seccomp.rs
rust/endo/: Cargo.toml  README.md
rust/endo/benches/: codec.rs
rust/endo/src/: cas.rs  cas_archive.rs  codec.rs  endo.rs  engine.rs  error.rs  inproc.rs  lib.rs  mailbox.rs  paths.rs  pidfile.rs  proc.rs  registry.rs  semver.rs  socket.rs  supervisor.rs  types.rs  util.rs
rust/endo/xsnap/: Cargo.toml  README.md  build.rs  xsnap-platform.c  xsnap-platform.h
rust/endo/xsnap/benches/: transport.rs  xs_engine.rs
rust/endo/xsnap/examples/: dir-handle-demo.js  make-demo-archive.rs
rust/endo/xsnap/src/: archive.rs  cesu8.rs  daemon_bootstrap.js  debug_protocol_tests.rs  envelope.rs  ffi.rs  host_aliases.js  lib.rs  polyfills.js  ses_boot.js  worker_bootstrap.js  worker_io.rs
rust/endo/xsnap/src/powers/: crypto.rs  debug.rs  fs.rs  mod.rs  modules.rs  process.rs  sqlite.rs
rust/ocapn_noise/: Cargo.toml  README.md  build.sh  rust-toolchain.toml
rust/ocapn_noise/src/: lib.rs
(+1122 files in other folders)
