[package]
name = "endo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "process", "io-util", "net", "time"] }
xsnap = { path = "xsnap" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "endor"
path = "src/bin/endor.rs"

[[bench]]
name = "codec"
harness = false
