[package]
name = "claude-orch-runtime-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
seccompiler = { version = "0.4", optional = true }

[features]
default = []
seccomp = ["dep:seccompiler"]
