[package]
name = "xsnap"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the XS JavaScript engine (Moddable)"

[dependencies]
cap-std = "3"
cap-tempfile = "3"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
